<resources>
    <string name="app_name">FishAnywhere</string>
    <string name="usrname">Username / E - mail</string>
    <string name="pswd">Password</string>
    <string name="forgot"><u>Forgot Password</u></string>
    <string name="basic_info">Basic Information</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">E - mail Address</string>
    <string name="register">Register</string>
    <string name="dashboard">Home</string>
    <string name="profile">Profile</string>
    <string name="snooz_listing">Snooze Listing</string>
    <string name="fishing_report">Fishing Report</string>
    <string name="share">Share</string>
    <string name="terms_and_condtion"><![CDATA[Terms & Condtion]]></string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="splash_tagline"> Book Professional Fishing Charters and Guides at the Best Prices ANYWHERE!</string>
    <string name="rucaptain">Are You A Captain?</string>
    <string name="tv_info_middle">If you want to be Captain login or Register here</string>
    <string name="tv_info_middle_">Login to manage your FishAnywhere Bookings</string>
    <string name="tv_info_bottom">If you want to book fishing charter service click here booking now</string>
    <string name="tv_info_bottom_">Book Your Next Fishing Adventures With Confidence</string>
    <string name="registerhere">Register Here</string>
    <string name="bookingcharter">Booking Charter</string>
    <string name="bookingcharter_">Book A Fishing Trip</string>
    <string name="bookingnow">Book Now</string>
    <string name="signupascaptain">SignUp as Captain</string>
    <string name="inforegisterascaptain">If you are new you can register as captain</string>
    <string name="realndeals">Real n Deals</string>
    <string name="trips">Trips</string>
    <string name="booking">Booking</string>
    <string name="listourfishingservice">List your fishing service</string>
    <string name="createlisting">Create Listing</string>
    <string name="trips_list">Trips List</string>
    <string name="no_trips_list">No Trip List, Because you didn\'t added</string>
    <string name="add_your_tripe">Add Your Tripe</string>
    <string name="booking_list">Booking List</string>
    <string name="no_booking_list">No One Booking Yet!</string>
    <string name="reel_n_deals_list">Reels n Deals</string>
    <string name="add_your_real_n_deals">Add Your Reels n Deals</string>
    <string name="no_reel_n_deals_list">No Reels n Deals Added</string>
    <string name="no_fishhing_report_list">No Fishing Report Added Yet!</string>
    <string name="add_your_fishing_report">Add Your Fishing Report</string>
    <string name="add_your_trip">Add Your Trip</string>
    <string name="viewmyprofile"><u>View My Profile</u></string>
    <string name="profileedit">Profile Edit</string>
    <string name="calender">Calender</string>
    <string name="sendreviews">Send Reviews</string>
    <string name="delete">Delete</string>
    <string name="addfishingreport">Add Fishing Report</string>
    <string name="snoozlisting">Snooze listing</string>
    <string name="Johnsmith">John Smith</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_desc">Name, description and price of trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_durarion">Trip Durartion</string>
    <string name="max_guest">Max Guests</string>
    <string name="aleternate_fishing_locaitons">Alternate Fishing Locations</string>
    <string name="alternate_fishing_locaitons">List upto 10 alternative launch or fishing locations ,separated by commas</string>
    <string name="trip_type">TripType</string>
    <string name="trip_cost">Trip Cost</string>
    <string name="trip_cost_brief">Price in USD ($) (include any applicable tax)</string>
    <string name="additional_personal_charge">Additional personal charge</string>
    <string name="trip_description">Trip Description</string>
    <string name="includes">Includes</string>
    <string name="cb_digital_photo">Digital Photo</string>
    <string name="cb_lunch">Lunch</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="other_included_items">Other included Items/Services</string>
    <string name="other_included_items_text">Any additional includes items/services, separated by commas</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_options">Booking options for your Trips.</string>
    <string name="cancelation_policy_brief">All sales are final 24 hours before trip is schedule to take place</string>
    <string name="set_your_cancelation">Set Your Cancelation Policy</string>
    <string name="time_date">Time and Date</string>
    <string name="trip_start_at">Trip Start at:</string>
    <string name="availablity_option">Availability Options</string>
    <string name="availability_options">By default, each trip is available every day of the week from midnight to midnight. Below you\'ll have the opportunity to narrow those timeframes down.</string>
    <string name="uncheked_day">Day That you offer this trip ( unchecked days off )</string>
    <string name="reel_n_deel">Set Reel n Deals</string>
    <string name="from">From :</string>
    <string name="date_from">yyyy-mm-dd</string>
    <string name="to">To :</string>
    <string name="discount_amount">Discount Amount :</string>
    <string name="set_the_discount">Set the discount for these dates?</string>
    <string name="yes">Yes</string>
    <string name="cancel_deals">Cancel Deals</string>
    <string name="listing_overview">Listing Overview</string>
    <string name="createlist_info">We have Following steps to Create your Listing</string>
    <string name="createlist_formguide">Name, and overview description of your Charter or Guide Service</string>
    <string name="make_grt_first">Make a great first impression on potential customers.Try including the unique qualities and benfits of your Fishing charter and Guide service.</string>
    <string name="charterandguideservicename">Charter and Guide Service Name</string>
    <string name="overview_description">Overview Description</string>
    <string name="charter_guideservicename">Please Charter and Guide Service Name</string>
    <string name="overview_desc_hint">Be as descriptive as possible!Write atleast two sentence</string>
    <string name="next">Next</string>
    <string name="saveexit"><![CDATA[Save & Exit]]></string>
    <string name="address_info">Enter the address of the location nearest this charter\'s launch location.A pin will be placed on a map for potential customers to see and this address will be sent to customersvia email after booking this charter.</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postalcode">Postal Code</string>
    <string name="country">Country</string>
    <string name="launchlatitude">Launch Latitude</string>
    <string name="launchlongitude">Launch Longitude</string>
    <string name="previous">Previous</string>
    <string name="launch_location">Launch Location</string>
    <string name="boattype">Boat Type</string>
    <string name="boatcaptain">Boat Captain</string>
    <string name="boatlength">Boat Length</string>
    <string name="yearbuilt">Year Built</string>
    <string name="enginemanufacturer">Engine Manufacturer</string>
    <string name="numberofengines">Number of Engines</string>
    <string name="horsepowerperengine">Horsepower Per Engine</string>
    <string name="boatinfo">Boat Info</string>
    <string name="boatsubheading">Tell your customers a bit about your boat</string>
    <string name="navg_eq_subheading">Tell your customers about your boat\'s Navigation equipment(if applicable)</string>
    <string name="boatinfo_builtyr_hint">Four-digital year your boat was built</string>
    <string name="gps">GPS</string>
    <string name="fishfinder">Fishfinder</string>
    <string name="radar">Radar</string>
    <string name="navigational_eqp">Navigational Equipment</string>
    <string name="lifejackets">Life Jackets</string>
    <string name="cprtrainedcrew">CPR-Trained Crew</string>
    <string name="fishaidequipment">Fish-Aid Equipment</string>
    <string name="create_your_fishing_report">Create Fishing Report</string>
    <string name="fishing_report_title">Fishing Report Title</string>
    <string name="select_your_character">Select Your Character</string>
    <string name="date_of_trip">Date of Trip</string>
    <string name="description">Description</string>
    <string name="write_a_summary">Write a summary of your fishing trip.</string>
    <string name="add_photos">Add Photos</string>
    <string name="listing_gallery">Listing Gallery</string>
    <string name="listigng_gallery_breif">Image must be of type: JPEG, PNG and under 20MB. Ideal resolution is 800X600 suggest number of upload is 6 images. Please retain from uploading photos that include imagery of you contact information, such as phone number or web addressess.</string>
    <string name="photo_listing">Upload pictures of your boat, captain or previous trips. The first will be used as your featured Images.</string>
    <string name="photos">Photos</string>
    <string name="minimum_age_requirements">Minimum Age Requirement</string>
    <string name="minimum_age">Ex. 16yrs Old, No Age Limit, All Ages welcome</string>
    <string name="catch_release_only"><![CDATA[Catch & Release Only]]></string>
    <string name="children_welcome">Children Welcome</string>
    <string name="clients_keep_catch">Clients keep Catch</string>
    <string name="crew_keep_catch">Crew Keeps Catch</string>
    <string name="no_smoking">No Smoking</string>
    <string name="no_hard_liqour">No Hard Liquor, Beer Allow</string>
    <string name="adults_only">Adults Only</string>
    <string name="no_alcohol">No Alcohol</string>
    <string name="no_illegal_substances">No Illegal Substances</string>
    <string name="post_your_fishing_report">Post Fishing Report</string>
    <string name="policy">What\'s include on your trips?</string>
    <string name="policy_">Polices</string>
    <string name="vhfradio">VHF Radio</string>
    <string name="flares">Flares</string>
    <string name="fireextinguishers">Fire Extinguishers</string>
    <string name="liferaft">Life Raft</string>
    <string name="epirb">EPIRB</string>
    <string name="safety_personal_eqp">Safety Personal &amp; Equipment</string>
    <string name="safety_personal_subheading">Which of these safety features or equipment can be found on board? </string>
    <string name="flighting_chair">Flighting chair</string>
    <string name="spearfishing_eqp">Spearfishing Equipment</string>
    <string name="downriggers">Downriggers</string>
    <string name="powerpoles">Power poles</string>
    <string name="polingplatform">Poling platform</string>
    <string name="wireless_trolling_motor">Wireless Trolling Motor</string>
    <string name="tunatubes">Tuna Tubes</string>
    <string name="castingplatform">Casting Platform</string>
    <string name="firstmate">First Mate</string>
    <string name="outriggers">Outriggers</string>
    <string name="livewell">Livewell</string>
    <string name="snorkelling_eq">snorkelling Equipment</string>
    <string name="fishing_crew">Fishing Gear &amp; Crew</string>
    <string name="fishing_crew_subheading">Tell your customers about the fishing gear you use</string>
    <string name="bed">Bed</string>
    <string name="flybridge">Flybridge</string>
    <string name="shower">Shower</string>
    <string name="salon">Salon</string>
    <string name="type">Type</string>
    <string name="blockingnote">Blocking Note</string>
</resources>