<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">



    <include
        layout="@layout/appbar_create_listing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_5dp"
        android:background="@color/shadow_line"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include
                    layout="@layout/top_layout_createlisting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <View
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1dp"
                    android:background="@color/login_text_grey"

                    />


                <LinearLayout
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:id="@+id/tv_createlist_formguide"
                    android:text="@string/make_grt_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_create_lt_text"

                    android:textColor="@color/createlist_formguide"

                    />

                <RelativeLayout

                    android:id="@+id/cb_usrcharter_guidename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:text="@string/forgot"

                    />


                <TextView
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:id="@+id/tv_charter_guideservicename"
                    android:text="@string/charterandguideservicename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/createlt_lt_heading"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"

                    />

                <EditText
                    android:textSize="@dimen/dimen_13sp"
                    android:maxLines="1"
                    android:padding="@dimen/dimen_10dp"
                    android:id="@+id/et_charter_guideservicename"
                    android:hint="@string/charter_guideservicename"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:background="@drawable/selector_edittext_createlisting"
                    android:inputType="textPersonName"
                    />

                <TextView
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:id="@+id/tv_overview_description"
                    android:text="@string/overview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/createlt_lt_heading"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"

                    />

                <EditText

                    android:id="@+id/et_overview_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_100dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:background="@drawable/selector_edittext_createlisting"
                    android:inputType="textPersonName"
                    />
                <TextView

                    android:text="@string/overview_desc_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_create_lt_text"
                    android:textStyle="italic"
                    android:textColor="@color/createlt_info"

                    />


                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/panggge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"/>

            <LinearLayout
                android:gravity="center"
                android:background="@drawable/info_bg_middle"
                android:weightSum="3.2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80dp">




                <Button
                    android:drawablePadding="@dimen/dimen_8dp"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/bt_next"
                    android:drawableRight="@drawable/ic_cl_next_bt"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_cllstbt13sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dimen_45dp"
                    android:background="@drawable/selector_button_createlist"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"/>

                <Button
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/dimen_cllstbt13sp"
                    android:id="@+id/bt_save_exit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dimen_45dp"
                    android:background="@drawable/selector_button_createlist"
                    android:text="@string/saveexit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    />



            </LinearLayout>



        </LinearLayout>



    </ScrollView>



</LinearLayout>
