<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:layout_marginTop="@dimen/dimen_15dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:text="@string/createlist_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/createlt_info"

        />

    <ImageView
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/iv_cllist_paging"
        android:src="@drawable/im_cl_listing_overview"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:id="@+id/tv_createlist_heading"
        android:text="@string/listing_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"

        />

    <View
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="4dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:background="@color/colorDrawerBg"

        />


    <TextView
        android:layout_marginTop="@dimen/dimen_18dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:id="@+id/tv_createlist_subheading"
        android:text="@string/createlist_formguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_12sp"

        android:textColor="@color/createlist_subheading"

        />



</LinearLayout>
