<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"

    android:layout_height="wrap_content">
    <RelativeLayout
        android:background="@drawable/selector_reel_deal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_realndeal"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:text="@string/reel_n_deel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/div"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_below="@+id/tv_realndeal"
            android:background="@color/createlt_info"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:id="@+id/ll_from_date"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_below="@+id/div"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_from_date"
                android:text="@string/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_title"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"

                />

            <EditText
                android:hint="@string/date_from"
                android:padding="@dimen/dimen_10dp"
                android:id="@+id/et_from_date"
                android:layout_width="150dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/selector_edittext_createlisting"
                android:inputType="textPersonName"
                android:maxLines="1"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_to_date"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_below="@+id/ll_from_date"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_trip_name"
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_title"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"

                />

            <EditText
                android:hint="@string/date_from"
                android:padding="@dimen/dimen_10dp"
                android:id="@+id/et_trip_name"
                android:layout_width="150dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/selector_edittext_createlisting"
                android:inputType="textPersonName"
                android:maxLines="1"
                />

        </LinearLayout>

        <LinearLayout

            android:gravity="center_vertical"
            android:id="@+id/ll_discount_amount"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_below="@+id/ll_to_date"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_discount_amount"
                android:text="@string/discount_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_title"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                />
            <RadioGroup
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:textSize="@dimen/dimen_20sp"
                    android:text="10%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:textSize="@dimen/dimen_20sp"
                    android:text="15%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>


        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/dimen_10sp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20sp"
            android:layout_below="@+id/ll_discount_amount"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/tv_set_discount"
            android:text="@string/set_the_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_title"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />


        <LinearLayout
            android:layout_below="@+id/tv_set_discount"
            android:gravity="center"
            android:weightSum="2.2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120dp">
            <Button

                android:id="@+id/bt_next"
                android:textSize="@dimen/dimen_15sp"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/selector_button"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"/>

            <Button

                android:textSize="@dimen/dimen_15sp"
                android:id="@+id/bt_save_exit"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/selector_button"
                android:text="@string/cancel_deals"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                />


        </LinearLayout>
    </RelativeLayout>


</LinearLayout>